k8s/skillpulse/11-frontend-service.yaml
# Defines the Service for the Frontend service.
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: skillpulse
  labels:
    app: frontend
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
